fix: suppress JVM native-access and JavaFX unnamed-module warnings
JVM warnings (A restricted method / System::load / enable-native-access):
  - Added Enable-Native-Access: ALL-UNNAMED to the fat-jar manifest via
    ManifestResourceTransformer (effective for java -jar runs)
  - Added --enable-native-access=ALL-UNNAMED to jpackage <javaOptions>
    (effective for APP_IMAGE launcher)

JavaFX "Unsupported JavaFX configuration: classes were loaded from unnamed
module" JUL warning: suppressed com.sun.javafx.application.PlatformImpl
logger to SEVERE at the very beginning of main() before JavaFX starts.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MnEJ55C1hoGQf8SRH3Ygfa